--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+/* 
+.form-control {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 50px;
+  color: black;
+  background-color: white;
+  padding:10px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: bold;
 }
+.form-control input {
+  width: 95%;
+  margin: 5px 0px;
+  border-radius: 5px;
+  border: solid 1.5px #D3D3D3;
+  padding: 5px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type=text]:hover{
+  box-shadow: 0 0 5pt 0.5pt #D3D3D3;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+input[type=text]:focus {
+  box-shadow: 0 0 5pt 2pt #D3D3D3;
+  outline-width: 0px;
+}
+button {
+  background-color: #7e46d7;
+  border: none;
   color: white;
+  border-radius: 3px;
+  padding: 7px 16px;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ */
